Added discord rich presence

--- a/SFR/build.example
+++ b/SFR/build.example
@@ -4,3 +4,5 @@ cd ..
 copy %1\SFR.exe.config %SFD%
 copy %1\SFR.exe %SFD%
 copy %1\0Harmony.dll %SFD%\SFR
+copy %1\DiscordRPC.dll %SFD%\SFR
+copy %1\Newtonsoft.Json.dll %SFD%\SFR
