--- a/SFR/packages.config
+++ b/SFR/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DiscordRichPresence" version="1.2.1.24" targetFramework="net472" />
   <package id="Lib.Harmony" version="2.3.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
