--- a/SFR/SFR.csproj
+++ b/SFR/SFR.csproj
@@ -46,6 +46,9 @@
       <HintPath>..\SFD\Box2D.XNA.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="DiscordRPC, Version=1.2.1.24, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DiscordRichPresence.1.2.1.24\lib\net45\DiscordRPC.dll</HintPath>
+    </Reference>
     <Reference Include="Lidgren.Network">
       <HintPath>..\SFD\Lidgren.Network.dll</HintPath>
       <Private>false</Private>
@@ -64,6 +67,9 @@
     </Reference>
     <Reference Include="mscorlib">
       <Private>false</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SFD.GameScriptInterface">
       <HintPath>..\SFD\SFD.GameScriptInterface.dll</HintPath>
